upd: delete method
