# docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/packs/add/{quantity}": {
+        "/packs/add": {
             "get": {
                 "description": "Add a new pack with unique quantity",
                 "summary": "Add pack",
@@ -36,11 +36,20 @@
                 }
             }
         },
-        "/packs/calculate/{quantity}": {
+        "/packs/calculate": {
             "get": {
                 "description": "Calculates the needed packs combination for a given quantity",
                 "summary": "Calculate packs",
                 "operationId": "calculate-packs",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Quantity",
+                        "name": "quantity",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -75,7 +84,7 @@
                 }
             }
         },
-        "/packs/remove/{quantity}": {
+        "/packs/remove": {
             "get": {
                 "description": "Removes a pack with a certain quantity",
                 "summary": "Remove pack",
